Create separate HabitCompletion class for more efficient management of Habit Completion Data